# progscrape

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  TEMPORARY_OUTAGE.md  TODO.md  app.yaml  cron.yaml  docker-compose.yml  dos.yaml  index.yaml  main.py  rfc3339.py  score.py  scrapers.py  search.py  stories.py  tags.py
.cargo/: config.toml
.github/workflows/: deploy-to-docker-depot.yml  deploy-to-docker.yml  deploy.yml  rust.yml  sync.yml
application/: Cargo.toml
application/src/: lib.rs
application/src/persist/: backerupper.rs  db.rs  index.rs  memindex.rs  mod.rs  scrapestore.rs  shard.rs
application/src/persist/index/: index.rs  indexshard.rs  mod.rs  schema.rs
application/src/story/: collector.rs  id.rs  mod.rs  render.rs  scorer.rs  tagger.rs
import/: dump_old.py  import_old.py
lib/: __init__.py  urlnorm.py
lib/stemming/: porter2.py
resource/blog/: 2023-02-25.md  20230225.md  2024-05-30.md  2024-06-06.md  20240530.md
resource/config/: cluster.json  config.json
resource/static/: zeitgeist.js
resource/static/css/: admin.scss  blog.scss  breakpoints.scss  layout.scss  reset-internal.scss  root.scss  story.scss
resource/static/root/: robots.txt
resource/templates/: admin_base.html  admin_frontpage.html  admin_shard.html  admin_status.html  admin_story.html  atom.xml  base.html  blog.html  feed.json  feed.txt  feed.xml  index.html  index2.html  macros_story.html  metrics.txt  scrape.html  sitemap.xml  story.html
resource/templates/admin/: admin.html  base.html  cron.html  cron_history.html  cron_refresh.html  cron_reindex.html  cron_scrape_run.html  cron_validate.html  frontpage.html  headers.html  scoretuner.html  scrape.html  scrape_test.html  shard.html  status.html  story.html  tasks.html
resource/templates/macros/: macros_config.html  macros_story.html
scrapers/: Cargo.toml
scrapers/import/: dump_old.py  import_old.py
scrapers/src/: collections.rs  extractor.rs  lib.rs  public.rs  scrapers.rs  web_scraper.rs
scrapers/src/backends/: def.rs  feed.rs  hacker_news.rs  lobsters.rs  mod.rs  reddit.rs  slashdot.rs
scrapers/src/backends/legacy/: mod.rs
scrapers/src/backends/utils/: html.rs
scrapers/src/datasci/: mod.rs  titletrimmer.rs  urlnormalizer.rs
scrapers/src/legacy/: legacy_import.rs
scrapers/src/testdata/: hn2.html  hn3.html  reddit-science1.json  reddit-science2.json  slashdot3.html
scrapers/src/types/: date.rs  error.rs  id.rs  mod.rs  url.rs
scrapers/testdata/: hn5.html  hn6.html  lobsters1.rss  lobsters2.rss  reddit-prog-tag1.json  reddit-prog-tag2.json  reddit-prog1.json  slashdot1.html  slashdot2.html
scrapers/testdata/titles/: reddit-input.txt  reddit-output.txt
src/: config.rs  main.rs  story.rs
src/datasci/: urlnormalizer.rs
src/persist/: db.rs  index.rs  memindex.rs  mod.rs
src/scrapers/: hacker_news.rs  html.rs  id.rs  legacy_import.rs  lobsters.rs  mod.rs  reddit.rs  reddit_json.rs  slashdot.rs  web_scraper.rs
src/scrapers/testdata/: hn1.html  hn4.html  slashdot1.html  slashdot2.html  slashdot3.html
src/story/: date.rs  id.rs  mod.rs  scorer.rs  tagger.rs  url.rs
src/web/: cron.rs  filters.rs  generate.rs  index.rs  mod.rs  resource.rs  serve_static_files.rs  static_files.rs
static/: admin.css  desktop.css  iphone.css  robots.txt  skinny.css
static/css/: base-font.scss  base.scss  breakpoints.scss  root.scss  story.scss
templates/: admin_base.html  admin_frontpage.html  admin_shard.html  admin_status.html  admin_story.html  atom.xml  base.html  clean.html  dump.html  feed.json  index.html  index2.html  scrape.html  sitemap.xml  status.html
web/: Cargo.toml
web/src/: auth.rs  config.rs  cron.rs  filters.rs  index.rs  main.rs  rate_limits.rs  resource.rs  serve_static_files.rs  smoketest.rs  static_files.rs  story.rs  types.rs  watchdog.rs  web.rs
