[workspace]
resolver = "2"
members = [
    "scrapers",
    "application",
    "web",
]

[workspace.package]
version = "0.0.2"

[workspace.dependencies]
progscrape = { path = "web", version = "0.0.2" }
progscrape-application = { path = "application", version = "0.0.2" }
progscrape-scrapers = { path = "scrapers", version = "0.0.2" }
