[workspace]
resolver = "2"
members = [
    "scrapers",
    "application",
    "web",
]

[workspace.package]
version = "0.0.3"

[workspace.dependencies]
progscrape = { path = "web", version = "0.0.3" }
progscrape-application = { path = "application", version = "0.0.3" }
progscrape-scrapers = { path = "scrapers", version = "0.0.3" }
