[package]
name = "progscrape-application"
edition = "2024"
license = "MIT"
homepage = "https://progscrape.com"
description = "progscrape.com application logic"
repository = "https://github.com/progscrape/progscrape"
version.workspace = true

[dependencies]
progscrape-scrapers.workspace = true

tracing = "0.1"
thiserror = "1.0.38"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_rusqlite = "0.35"
serde_json = "1.0"
keepcalm = { version = "0.4", features = ["serde"] }
rusqlite = "0.31"
base64 = "0.22"
itertools = "0"

# Do not bump
tantivy = "=0.19.2"
rust-bert = { version="0.22.0", features = ["download-libtorch"] }

[dev-dependencies]
rstest = "0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
progscrape-scrapers = { path = "../scrapers", features=["scrape_test"] }
tempfile = "3.3"
