[package]
name = "progscrape-application"
edition = "2024"
license = "MIT"
homepage = "https://progscrape.com"
description = "progscrape.com application logic"
repository = "https://github.com/progscrape/progscrape"
version.workspace = true

[dependencies]
base64.workspace = true
itertools.workspace = true
keepcalm.workspace = true
progscrape-scrapers.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

rusqlite = "0.39.0"
serde_rusqlite = "0.42.0"

# Do not bump
console = { version = "0.16", features = ["std"] } # fixes a transitive dep issue
rust-bert = { version = "=0.23.0", features = ["download-libtorch"] }
tantivy = "=0.19.2"

[dev-dependencies]
# Workspace
rstest.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true

# External
progscrape-scrapers = { path = "../scrapers", features = ["scrape_test"] }
