[package]
name = "progscrape-scrapers"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
thiserror = "1.0"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_cbor = "0.11"

tl = "0.7"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
roxmltree = "0.20"
url = "2.3"
itertools = "0"
regex = "1.7"
urlnorm = "0.1"

[dev-dependencies]
rstest = "0"

[features]
default = []
scrape_test = []
