[package]
name = "progscrape-scrapers"
edition = "2024"
license = "MIT"
homepage = "https://progscrape.com"
description = "progscrape.com service scrapers"
repository = "https://github.com/progscrape/progscrape"
version.workspace = true

[dependencies]
chrono.workspace = true
chrono-tz.workspace = true
itertools.workspace = true
regex.workspace = true
serde.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true

roxmltree = "0.21.1"
tl = "0.7"
urlnorm = "0.1"

[dev-dependencies]
rstest.workspace = true

[features]
default = []
scrape_test = []
