[package]
name = "progscrape"
edition = "2024"
license = "MIT"
homepage = "https://progscrape.com"
description = "progscrape.com web application"
repository = "https://github.com/progscrape/progscrape"
version.workspace = true

[dependencies]
progscrape-application.workspace = true
progscrape-scrapers.workspace = true

futures.workspace = true
itertools.workspace = true
keepcalm.workspace = true
rand.workspace = true
serde.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

axum = { version = "0.8", features = ["ws"] }
bloom = "0.3"
clap = { version = "4.1", features = ["derive"] }
git-version = "0.3"
grass = "0.13"
hyper = "1"
infer = "0.19"
libc = "0.2"
markdown = "1.0.0"
notify = "8.2"
num-format = "0.4.4"
reqwest = { version = "0.13.2", default-features = false, features = [
    "charset",
    "http2",
    "json",
    "rustls-no-provider",
    "system-proxy",
] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tera = "1.17.1"
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5"
unwrap-infallible = "1"

# The `taskdump` feature powers the /admin/tasks/ page (Handle::dump()). Tokio
# only supports it on Linux x86/x86_64/aarch64 (and `compile_error!`s elsewhere),
# so it's enabled per-target here rather than globally. It also needs the
# `--cfg tokio_unstable` flag set in .cargo/config.toml.
[target.'cfg(all(target_os = "linux", any(target_arch = "aarch64", target_arch = "x86", target_arch = "x86_64")))'.dependencies]
tokio = { version = "1.52.3", features = ["taskdump"] }

[dev-dependencies]
progscrape-scrapers = { path = "../scrapers", features = ["scrape_test"] }

rstest.workspace = true
tempfile.workspace = true

[profile.release]
lto = true
codegen-units = 1
